--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,87 @@
-.space{
-    padding-right: 1px;
+body {
+  background-color: #f7f6f6
+}
+
+.social-list {
+  display: inline-flex
+}
+
+.social-list li {
+  list-style: none;
+  margin-right: 10px
+}
+
+.maincard {
+  position: relative;
+  width: 120px;
+  height: 80px
+}
+
+.thecard {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d;
+  transition: all 0.8s ease
+}
+
+.thecard:hover {
+  transform: rotateY(180deg)
+}
+
+.thefront {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: hidden;
+  color: #fff;
+  border-radius: 10px;
+  cursor: pointer;
+  border: 1px solid #eee;
+  box-shadow: 5px 6px 6px 2px #e9ecef;
+  padding: 4px
+}
+
+.theback {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  background-color: hidden;
+  color: #fff;
+  border-radius: 10px;
+  transform: rotateY(180deg);
+  border: 1px solid #eee;
+  box-shadow: 5px 6px 6px 2px #e9ecef;
+  padding: 4px
+}
+
+.social-text small {
+  font-size: 20px
+}
+
+@media (max-width:700px) {
+  .social-list {
+      display: block
+  }
+}
+
+.linkedin {
+  background: #3b5998
+}
+
+.github {
+  background: #000000
+}
+
+.stackoverflow {
+  background: #f7a000
+}
+
+.hackerrank {
+  background: #4dc247
+}
+
+.pinterest {
+  background: #cb2027
 }
