--- a/css/socialmedia.css
+++ b/css/socialmedia.css
@@ -1,93 +1,65 @@
-/* footer social icons */
-ul.social-network {
-  list-style: none;
-  display: inline;
-  margin-left: 0 !important;
+ul.socialIcons {
   padding: 0;
+  text-align: center;
 }
 
-ul.social-network li {
-  display: inline;
-  margin: 0 5px;
-}
-
-
-/* footer social icons */
-
-.social-network a.icoLeetcode:hover {
-  background-color: #F56505;
-}
-
-.social-network a.icoGitHub:hover {
-  background-color: #000000;
-}
-
-.social-network a.icoStackOverflow:hover {
-  background-color: #ffa705;
-}
-
-.social-network a.icoHackerRank:hover {
-  background-color: #14b91c;
-}
-
-.social-network a.icoLinkedin:hover {
-  background-color: #007bb7;
-}
-
-.social-network a.icoLeetcode:hover i,
-.social-network a.icoGitHub:hover i,
-.social-network a.icoStackOverflow:hover i,
-.social-network a.icoHackerRank:hover i,
-.social-network a.icoLinkedin:hover i {
-  color: #fff;
-}
-
-a.socialIcon:hover,
-.socialHoverClass {
-  color: #44BCDD;
-}
-
-.social-circle li a {
+.socialIcons li {
+  background-color: yellow;
+  list-style: none;
   display: inline-block;
-  position: relative;
-  margin: 0 auto 0 auto;
-  -moz-border-radius: 50%;
-  -webkit-border-radius: 50%;
-  border-radius: 50%;
-  text-align: center;
-  width: 40px;
-  height: 40px;
-  font-size: 20px;
+  margin: 4px;
+  border-radius: 2em;
+  overflow: hidden;
 }
 
-.social-circle li i {
-  margin: 0;
-  line-height: 40px;
-  text-align: center;
-}
-
-.social-circle li a:hover i,
-.triggeredHover {
-  -moz-transform: rotate(360deg);
-  -webkit-transform: rotate(360deg);
-  -ms--transform: rotate(360deg);
-  transform: rotate(360deg);
-  -webkit-transition: all 0.2s;
-  -moz-transition: all 0.2s;
-  -o-transition: all 0.2s;
-  -ms-transition: all 0.2s;
-  transition: all 0.2s;
-}
-
-.social-circle i {
+.socialIcons li a {
+  display: block;
+  padding: 1em;
+  min-width: 2em;
+  max-width: 1.28571429em;
+  height: 1.28571429em;
+  white-space: nowrap;
+  line-height: 1.5em; /*it's working only when you write text with icon*/
+  transition: 0.5s;
+  text-decoration: none;
+  font-family: arial;
   color: #fff;
-  -webkit-transition: all 0.8s;
-  -moz-transition: all 0.8s;
-  -o-transition: all 0.8s;
-  -ms-transition: all 0.8s;
-  transition: all 0.8s;
 }
 
-.sns a {
-  background-color: #d3d3d363;
+.socialIcons li i {/*lets not change this */
+  margin-right: 0.5em;
+}
+
+.socialIcons li:hover a {/*lets not change this */
+  max-width: 200px;
+  padding-right: 1em;
+}
+
+.socialIcons .github {
+  background-color: #000000;
+  box-shadow: 0 0 16px #000000;
+}
+
+.socialIcons .stackoverflow {
+  background-color: #FFA116;
+  box-shadow: 0 0 16px #FFA116;
+}
+
+.socialIcons .linkedin {
+  background-color: #0e76a8;
+  box-shadow: 0 0 16px #0e76a8;
+}
+
+.socialIcons .hackerrank {
+  background-color: #5ad421;
+  box-shadow: 0 0 16px #5ad421;
+}
+
+.socialIcons .leetcode {
+  background-color: #666666;
+  box-shadow: 0 0 16px #666666;
+}
+.socialIcons .codewars {
+  background-color: #ffffff;
+  box-shadow: 0 0 16px #ffffff;
 }
