scroll-up fix position

--- a/css/scrollup.css
+++ b/css/scrollup.css
@@ -10,7 +10,7 @@
   right: 39px;
   z-index: 98;
   padding: 21px;
-  background-color: #580963
+  background-color: rgba(87, 7, 87, 0.932)
 }
 
 .js .cd-top--fade-out {
