--- a/css/social.css
+++ b/css/social.css
@@ -1,65 +1,149 @@
-ul.socialIcons {
-  padding: 0;
-  text-align: center;
+
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+html,body{
+  margin:0;
+  height:100%;
+  font-family: 'Montserrat', sans-serif;
+}
+.container{
+  padding-top:0px;
+  min-height:0%;
+  text-align:center;
+  
 }
 
-.socialIcons li {
-  background-color: rgb(202, 34, 160);
-  list-style: none;
-  display: inline-block;
-  margin: 4px;
-  border-radius: 2em;
-  overflow: hidden;
+.headline{
+  text-align:center;
+ 
+}
+.headline  h1{
+    font-size:20px;
+    font-family: 'Montserrat', sans-serif;
+    color:rgb(53, 4, 59);
+  }
+
+.social-buttons{
+  display:inline-block;
+  background: rgba(256,256,256,0.5);
+  padding:20px;
+  padding-bottom: 5px;
+  border-radius:10px;
+  text-align:center;
+  margin:20px 10px;
+  box-shadow: 0px 0px 32px -7px #2c0121;
+}
+  
+/* Helper class to divide the icons */
+.social-margin {
+  margin-right: 10px;
 }
 
-.socialIcons li a {
-  display: block;
-  padding: 2em;
-  min-width: 2em;
-  max-width: 1.28571429em;
-  height: 1.28571429em;
-  white-space: nowrap;
-  line-height: 1.5em; /*it's working only when you write text with icon*/
-  transition: 0.5s;
+a,
+a:hover,
+a:focus,
+a:active {
   text-decoration: none;
-  font-family: arial;
-  color: #fff;
 }
 
-.socialIcons li i {/*lets not change this */
-  margin-right: 1.2em;
+.social-icon {
+  margin-bottom: 15px;
+   box-sizing: border-box;
+  -moz-border-radius: 138px;
+  -webkit-border-radius: 138px;
+  border-radius: 138px;
+  border: 5px solid;
+  text-align: center;
+  width: 50px;
+  height: 50px;
+  display: inline-block;
+  line-height: 1px;
+  padding-top: 11px;
+  transition: all 0.5s;
 }
+.social-icon:hover {
+    transform: rotate(360deg)scale(1.3);
+  }
+  /* stackoverflow  Button Styling */
+ .stackoverflow {
+    font-size: 17px;
+    padding-top: 12px;
+    border-color: #e28307;
+    background-color: #e27e21;
+    color: #ffffff;
+   
+  }
+  .stackoverflow :hover {
+    background-color: #ffffff;
+    color: #e4860b;
+  }
+  /* codewars Button Styling */
+.codewars {
+    font-size: 17px;
+    padding-top: 12px;
+    padding-left: 2px;
+    border-color: #000000;
+    background-color: #8d1515;
+    color: #ffffff;
+    
+  }
+  .codewars:hover {
+    background-color: #ffffff;
+    color: #030303;
+  }
 
-.socialIcons li:hover a {/*lets not change this */
-  max-width: 200px;
-  padding-right: 1em;
-}
+  /* Linkedin Button Styling */
+  .linkedin {
+    font-size: 17px;
+    padding-top: 12px;
+    padding-left: 1px;
+    background-color: #0976b4;
+    color: #ffffff;
+    border-color: #0976b4;
+    
+  }
+  .linkedin :hover {
+    background-color: #ffffff;
+    color: #0976b4;
+  }
+  /* github Button Styling */
+.github {
+    font-size: 17px;
+    padding-top: 12px;
+    background-color:  #000000;
+    color: #ffffff;
+    border-color:  #000000;
+    
+  }
+  .github:hover {
+    background-color: #ffffff;
+    color:  #000000;
+  }
+  /* hackerrank Button Styling */
+  .hackerrank {
+    font-size: 17px;
+    padding-top: 12px;
+    background-color: #2dc50e;
+    color: #ffffff;
+    border-color: #2dc50e;
+    
+  }
+  .hackerrank :hover {
+    background-color: #ffffff;
+    color: #2dc50e;
+  }
 
-.socialIcons .github {
-  background-color: #000000;
-  box-shadow: 0 0 16px #000000;
-}
 
-.socialIcons .stackoverflow {
-  background-color: #FFA116;
-  box-shadow: 0 0 16px #FFA116;
-}
-
-.socialIcons .linkedin {
-  background-color: #0e76a8;
-  box-shadow: 0 0 16px #0e76a8;
-}
-
-.socialIcons .hackerrank {
-  background-color: #5ad421;
-  box-shadow: 0 0 16px #5ad421;
-}
-
-.socialIcons .leetcode {
-  background-color: #666666;
-  box-shadow: 0 0 16px #666666;
-}
-.socialIcons .codewars {
-  background-color: #ffffff;
-  box-shadow: 0 0 16px #ffffff;
-}
+  /* leetcode Button Styling */
+  .leetcode {
+    font-size: 17px;
+    padding-top: 12px;
+    padding-left: 0px;
+    background-color: #ffffff57;
+    color: #ffffff;
+    border-color: #ff8800d8;
+    
+  }
+  .leetcode :hover {
+    background-color: #ffffff;
+    color: #ff8800d8;
+  }
