--- a/css/social.css
+++ b/css/social.css
@@ -5,12 +5,13 @@ html,body{
   height:100%;
   font-family: 'Montserrat', sans-serif;
 }
-.container{
+/* .container{
   padding-top:0px;
   min-height:0%;
   text-align:center;
+  color:#35043bd8
   
-}
+} */
 
 .headline{
   text-align:center;
@@ -18,7 +19,7 @@ html,body{
 }
 .headline  h1{
     font-size:20px;
-    font-family: 'Montserrat', sans-serif;
+    /* font-family: 'Montserrat', sans-serif; */
     color:rgb(53, 4, 59);
   }
 
