--- a/css/social.css
+++ b/css/social.css
@@ -1,10 +1,10 @@
 
-@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+/* @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 html,body{
   margin:0;
   height:100%;
   font-family: 'Montserrat', sans-serif;
-}
+} */
 /* .container{
   padding-top:0px;
   min-height:0%;
