--- a/css/volunteer.css
+++ b/css/volunteer.css
@@ -14,4 +14,10 @@
     line-height: 1.2;
     color: #5b5b5b;
     text-align: justify;
+    margin-bottom: 8px;
   }
+.cl{
+    margin-left: 0.0001em;
+    margin-bottom: 15px;
+    margin-top: 15px;
+}
