--- a/css/volunteer.css
+++ b/css/volunteer.css
@@ -13,7 +13,7 @@
     font-weight: 300;
     line-height: 1.2;
     color: #5b5b5b;
-    text-align: justify;
+    text-align: left;
     margin-bottom: 8px;
   }
 .cl{
