--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -327,7 +327,7 @@ b, strong {
 }
 .timeline-wrapper:before {
   content: "";
-  background: #474559;
+  background: #5c1769;
   width: 3px;
   height: 100%;
   position: absolute;
@@ -335,7 +335,7 @@ b, strong {
 }
 
 .timeline-yr {
-  background: #474559;
+  background: #5c1769;
   border-radius: 100%;
   position: absolute;
   width: 75px;
