--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -446,7 +446,7 @@ b, strong {
 }
 
 .contact-info {
-  background: #474559;
+  background: #500f58;
   border-radius: 0 0 3px 3px;
   position: relative;
   bottom: 8px;
