--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -85,21 +85,30 @@ b, strong {
   color: #5b5b5b;
   font-weight: bold;
   border-radius: 50px;
-  padding: 13px 29px;
-  font-size: 14px;
+  padding: 20px 35px;
+  font-size: 16px;
   line-height: normal;
   overflow: hidden;
   transition: all 0.4s ease;
 }
+
 .custom-btn:hover {
-  color: #580963;
+  color: #b1afb1;
 }
-.custom-btn.custom-btn-bg {
-  background: #474559;
+.custom-btn.custom-btn-bg.b1 {
+  background: #5d0777;
+  color: #ffffff;
+}
+.custom-btn.custom-btn-bg.b2 {
+  background: #074177;
+  color: #ffffff;
+}
+.custom-btn.custom-btn-bg.b3 {
+  background: #8f0948;
   color: #ffffff;
 }
 .custom-btn.custom-btn-bg:hover {
-  background: #580963;
+  background: #958997;
   color: #ffffff !important;
 }
 
